# kreuzberg

./: .dockerignore  .gitignore  .golangci.yml  .pre-commit-config.yaml  .sdkmanrc  CHANGELOG.md  Cargo.toml  DEPRECATION_GUIDE.md  DEPRECATION_IMPLEMENTATION_SUMMARY.md  DEPRECATION_INDEX.md  GAP_ANALYSIS_AND_FIXES.md  MANIFEST.in  README.md  TESTS_CREATED_CHECKLIST.md  Taskfile.yaml  Taskfile.yml  VALIDATION_REPORT.md  VALIDATION_SUMMARY.txt  composer.json  deny.toml  mkdocs.yaml  package.json  pnpm-lock.yaml  pyproject.toml  rust-toolchain.toml  validate_examples.rs
.ai-rulez/: custom-agents.yaml  custom-rules.yaml
.cargo/: config.toml
.github/: actionlint.yaml  dependabot.yaml
benchmarks/: end_to_end_benchmark.py  serialization_benchmark.py  statistical_benchmark.py
docker/: Dockerfile.core  Dockerfile.full  Dockerfile.musl-ffi  Dockerfile.musl-rustler
docs/: DOCUMENTATION_AUDIT_v4.2.md  FINAL_AUDIT_REPORT_v4.2.md  features.md  index.md  llms.txt  paddle-ocr-ort-feasibility.md  performance.md
e2e/: README.md
examples/: kreuzberg.json  kreuzberg.toml  kreuzberg.yaml
kreuzberg/: __init__.py  _config.py  _extractors.py  _gmft.py  _language_detection.py  _ocr_pre_processing.py  _pandoc.py  _tesseract.py  _types.py  cli.py  extraction.py
scripts/: build_python_dev.sh  compare_benchmarks.py  package_node_artifacts.sh  readme_config.yaml  sync_versions.py  verify_api_parity.py
src/: _extraction.py  extraction.py
tools/snippet-runner/: Cargo.toml
tools/snippet-runner/src/validators/: c.rs  csharp.rs  go.rs  java.rs  mod.rs  rust.rs  typescript.rs
(+1562 files in other folders)
