[package]
name = "snippet-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "snippet-runner"
path = "src/main.rs"

[lib]
name = "snippet_runner"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
rayon = { workspace = true }
toml = { workspace = true }
walkdir = "2.5"
which = "8"
